tests/miniJava/neg/004982_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , int [] java System.out.println ) { return 0 ; } }
